@@ -1,9 +1,9 @@
 class OgSession < Wee::Session
   def awake
-    application.db.get_connection
+    application.db.get_store
   end
 
   def sleep
-    application.db.put_connection
+    application.db.put_store
   end
 end
